tests/snapshots/semantics_tests__ok_rust_types.sem.snap
---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "name": "x",
                "type_ref": {
                  "Simple": "i32"
                },
                "init": {
                  "Literal": {
                    "Int": 42
                  }
                }
              }
            },
            {
              "VarDecl": {
                "name": "y",
                "type_ref": {
                  "Simple": "u64"
                },
                "init": {
                  "Literal": {
                    "Int": 1000000
                  }
                }
              }
            },
            {
              "VarDecl": {
                "name": "z",
                "type_ref": {
                  "Simple": "f32"
                },
                "init": {
                  "Literal": {
                    "Float": 3.14
                  }
                }
              }
            },
            {
              "VarDecl": {
                "name": "w",
                "type_ref": {
                  "Simple": "f64"
                },
                "init": {
                  "Literal": {
                    "Float": 2.718281828
                  }
                }
              }
            },
            {
              "VarDecl": {
                "name": "optional",
                "type_ref": {
                  "Generic": {
                    "base": "Option",
                    "args": [
                      {
                        "Simple": "string"
                      }
                    ]
                  }
                },
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "Some"
                    },
                    "args": [
                      {
                        "Literal": {
                          "String": "hello"
                        }
                      }
                    ]
                  }
                }
              }
            },
            {
              "VarDecl": {
                "name": "result",
                "type_ref": {
                  "Generic": {
                    "base": "Result",
                    "args": [
                      {
                        "Simple": "number"
                      },
                      {
                        "Simple": "string"
                      }
                    ]
                  }
                },
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "Ok"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 42
                        }
                      }
                    ]
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false
      }
    }
  ]
}
