tests/snapshots/semantics_tests__ok_type_inference.sem.snap
---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "x"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Literal": {
                    "Int": 42
                  }
                },
                "is_fallible": false
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "y"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Literal": {
                    "Float": 3.14
                  }
                },
                "is_fallible": false
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "z"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Literal": {
                    "String": "hello"
                  }
                },
                "is_fallible": false
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "w"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Literal": {
                    "Bool": true
                  }
                },
                "is_fallible": false
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "c"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Literal": {
                    "Char": "A"
                  }
                },
                "is_fallible": false
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "numbers"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "ArrayLiteral": [
                    {
                      "Literal": {
                        "Int": 1
                      }
                    },
                    {
                      "Literal": {
                        "Int": 2
                      }
                    },
                    {
                      "Literal": {
                        "Int": 3
                      }
                    },
                    {
                      "Literal": {
                        "Int": 4
                      }
                    },
                    {
                      "Literal": {
                        "Int": 5
                      }
                    }
                  ]
                },
                "is_fallible": false
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "names"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "ArrayLiteral": [
                    {
                      "Literal": {
                        "String": "Alice"
                      }
                    },
                    {
                      "Literal": {
                        "String": "Bob"
                      }
                    },
                    {
                      "Literal": {
                        "String": "Charlie"
                      }
                    }
                  ]
                },
                "is_fallible": false
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "person"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "ObjectLiteral": [
                    [
                      "name",
                      {
                        "Literal": {
                          "String": "John"
                        }
                      }
                    ],
                    [
                      "age",
                      {
                        "Literal": {
                          "Int": 30
                        }
                      }
                    ]
                  ]
                },
                "is_fallible": false
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
