tests/snapshots/semantics_tests__ok_undefined_type.sem.snap
---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "x"
                    },
                    "type_ref": {
                      "Simple": "UndefinedType"
                    }
                  }
                ],
                "init": {
                  "Literal": {
                    "Int": 42
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
